MASFE2024S-108 Order item overflow fix

--- a/src/components/OrderSummary/OrderSummary.module.css
+++ b/src/components/OrderSummary/OrderSummary.module.css
@@ -8,6 +8,7 @@
     @include flexbox($direction: column, $gap: $spacing-s, $justifyContent: space-between);
 
     box-shadow: inset 0 0 0 1px $color-grey-100;
+    max-width: 283px;
     min-height: 434px;
     min-width: 283px;
     padding: $spacing-xs;
